small fixes, Anca's suggestions partially, ALL parts to do are marked TODO

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ InternalDoc/velout_doc_internal\.log
 InternalDoc/velout_doc_internal\.out
 
 InternalDoc/velout_doc_internal\.synctex\.gz
+
+Report/uu_cern_thesis_report.lof
+
+Report/uu_cern_thesis_report.lot
